fixing button alignment for village font button

--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@
 }
 #reg-font {
 	font-family: Lexend;
-	padding-top: 14px;
-	padding-bottom: 15px;
+	padding-top: 9px;
 }
 #village-font {
 	font-family: Village;
